--- a/src/main/resources/assets/eden_expanded/lang/en_us.json
+++ b/src/main/resources/assets/eden_expanded/lang/en_us.json
@@ -1,4 +1,6 @@
 {
+  "itemgroup.eden_alpha": "Eden Alpha",
+
   "item.eden_expanded.eden_mussel": "Eden Mussel",
   "item.eden_expanded.raw_eden_mussel": "Raw Eden Mussel",
   "item.eden_expanded.cooked_eden_mussel": "Cooked Eden Mussel",
@@ -56,6 +58,11 @@
   "block.eden_expanded.rockwood_pressure_plate": "Rockwood Pressure Plate",
   "block.eden_expanded.rockwood_button": "Rockwood Button",
   "block.eden_expanded.rockwood_leaves": "Rockwood Leaves",
+  "block.eden_expanded.rockwood_sign": "Rockwood Sign",
 
-  "itemgroup.eden_alpha": "Eden Alpha"
+  "item.eden_expanded.raw_rockbeef": "Raw Rockbeef",
+  "item.eden_expanded.cooked_rockbeef": "Cooked Rockbeef",
+
+  "item.eden_expanded.trogloraptor_claw": "Trogloraptor Claw",
+  "item.eden_expanded.trogloraptor_spear": "Trogloraptor Spear"
 }
