Added: - Scorpion weapons - Whipraptor weapons
I still have to make the rockwood signs, hanging signs, boats, and chest boats, however those will likely take some time because I have no clue what I'm doing lmfao

I also have yet to make any mobs, however those will be coming soon.

All of these blocks and items are currently unobtainable, but will be obtainable in the Eden Alpha dimension in the future.

--- a/src/main/resources/assets/eden_expanded/lang/en_us.json
+++ b/src/main/resources/assets/eden_expanded/lang/en_us.json
@@ -64,5 +64,9 @@
   "item.eden_expanded.cooked_rockbeef": "Cooked Rockbeef",
 
   "item.eden_expanded.trogloraptor_claw": "Trogloraptor Claw",
-  "item.eden_expanded.trogloraptor_spear": "Trogloraptor Spear"
+  "item.eden_expanded.trogloraptor_spear": "Trogloraptor Spear",
+  "item.eden_expanded.scorpion_whip": "Scorpion Whip",
+  "item.eden_expanded.scorpion_scythe": "Scorpion Scythe",
+  "item.eden_expanded.whipraptor_claw": "Whipraptor Claw",
+  "item.eden_expanded.whipraptor_dagger": "Whipraptor Dagger"
 }
